--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,8 +4,7 @@
   	<title>219west Mobile Drink Ordering</title>
     <script src="/vendor/jquery-1.9.1.min.js" type="text/javascript"></script>
     <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" media="all" />
-    <link rel="stylesheet" href="bootstrap/css/bootstrap-responsive.min.css" media="all" />
+    <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" href="/vendor/fontawesome/css/font-awesome.min.css">
   </head>
   <body style="padding-top: 50px;">
@@ -18,7 +17,25 @@
               219west Mobile Ordering
             </a>
 
-            
+            <ul class="nav">
+              <li><a href="/">Home</a></li>
+              <li><a href="/secure/place">Secret</a></li>
+            </ul>
+
+            <ul class="nav pull-right">
+              <li class="dropdown">
+                <a href="#"
+                      class="dropdown-toggle"
+                      data-toggle="dropdown">
+                      <%=username%>
+                      <b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu">
+                      <li><a href="/login/form">Login</a></li>
+                      <li><a href="/logout">Logout</a></li>
+                </ul>
+              </li>
+            </ul>
 
 
         </div>
