Working on fluid containers and forms

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,7 +11,7 @@
 
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
-        <div class="container">
+        <div class="container-fluid">
 
             <a class="brand" href="#">
               219west Mobile Ordering
