--- a/views/form.erb
+++ b/views/form.erb
@@ -1,4 +1,8 @@
-<form action='/form' method='post' class="form-inline well">
-  <input type="text" name='order' placeholder="2 Tito's and Sodas with Lime" autofocus>
-  <input class="btn primary" type='submit' value='Send Order'>
-</form>
+<div class="container-fluid">
+	<div class="span12">
+		<form action='/form' method='post' class="form-horizontal">
+  			<input type="text" name='order' placeholder="2 Tito's and Sodas with Lime" autofocus>
+  			<input class="btn primary" type='submit' value='Send Order'>
+		</form>
+	</div>
+</div>
