Polishing responsive form

--- a/views/form.erb
+++ b/views/form.erb
@@ -2,7 +2,18 @@
 	<div class="span12">
 		<form action='/form' method='post' class="form-horizontal">
   			<input type="text" name='order' placeholder="2 Tito's and Sodas with Lime" autofocus>
-  			<input class="btn primary" type='submit' value='Send Order'>
+  		</form>
+  		<form action='/form' method='post' class="form-horizontal">
+  			<input type="text" name='order' placeholder="2 Tito's and Sodas with Lime" autofocus>
+  		</form>
+  		<form action='/form' method='post' class="form-horizontal">
+  			<input type="text" name='order' placeholder="2 Tito's and Sodas with Lime" autofocus>
+  		</form>
+  		<form action='/form' method='post' class="form-horizontal">
+  			<input type="text" name='order' placeholder="2 Tito's and Sodas with Lime" autofocus>
+  		</form>
+  		<form action='/form' method='post' class="form-horizontal">
+			<input class="btn primary" type='submit' value='Send Order'>
 		</form>
 	</div>
 </div>
