--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,7 @@
   	<title>219west Mobile Drink Ordering</title>
     <script src="/vendor/jquery-1.9.1.min.js" type="text/javascript"></script>
     <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" href="/vendor/fontawesome/css/font-awesome.min.css">
   </head>
@@ -16,11 +17,6 @@
             <a class="brand" href="#">
               219west Mobile Ordering
             </a>
-
-            <ul class="nav">
-              <li><a href="/">Home</a></li>
-              <li><a href="/secure/place">Secret</a></li>
-            </ul>
 
             <ul class="nav pull-right">
               <li class="dropdown">
