--- a/views/form.erb
+++ b/views/form.erb
@@ -1,19 +1,17 @@
 <div class="container-fluid">
 	<div class="span12">
 		<form action='/form' method='post' class="form-horizontal">
-  			<input type="text" name='order' placeholder="2 Tito's and Sodas with Lime" autofocus>
-  		</form>
-  		<form action='/form' method='post' class="form-horizontal">
-  			<input type="text" name='order' placeholder="2 Tito's and Sodas with Lime" autofocus>
-  		</form>
-  		<form action='/form' method='post' class="form-horizontal">
-  			<input type="text" name='order' placeholder="2 Tito's and Sodas with Lime" autofocus>
-  		</form>
-  		<form action='/form' method='post' class="form-horizontal">
-  			<input type="text" name='order' placeholder="2 Tito's and Sodas with Lime" autofocus>
-  		</form>
-  		<form action='/form' method='post' class="form-horizontal">
-			<input class="btn primary" type='submit' value='Send Order'>
+  			<p><input class="span12" type="text" name='order' placeholder="2 Tito's and Sodas with Lime" autofocus></p>
+
+  			<p><input class="span12" type="text" name='order' placeholder="3 Miller Lite Drafts" autofocus></p>
+
+  			<p><input class="span12" type="text" name='order' autofocus></p>
+
+  			<p><input class="span12" type="text" name='order' autofocus></p>
+
+  			<p><input class="span12" type="text" name='order' autofocus></p>
+
+			<p><input class="btn btn-large btn-info" type='submit' value='Send Drink Order'></p>
 		</form>
 	</div>
 </div>
