Polished drink order form and began overhaul on login form

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-  	<title>219west Mobile Drink Ordering</title>
+  	<title>RestlessNapkin</title>
     <script src="/vendor/jquery-1.9.1.min.js" type="text/javascript"></script>
     <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" href="/vendor/fontawesome/css/font-awesome.min.css">
   </head>
-  <body style="padding-top: 50px;">
+  <body>
 
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
 
             <a class="brand" href="#">
-              219west Mobile Ordering
+              219 West
             </a>
 
             <ul class="nav pull-right">
