--- a/views/form.erb
+++ b/views/form.erb
@@ -3,13 +3,13 @@
 		<form action='/form' method='post' class="form-horizontal">
   			<p><input class="span12" type="text" name='order' placeholder="2 Tito's and Sodas with Lime" autofocus></p>
 
-  			<p><input class="span12" type="text" name='order' placeholder="3 Miller Lite Drafts" autofocus></p>
+  			<p><input class="span12" type="text" name='order' placeholder="3 Miller Lite Drafts"></p>
 
-  			<p><input class="span12" type="text" name='order' autofocus></p>
+  			<p><input class="span12" type="text" name='order'></p>
 
-  			<p><input class="span12" type="text" name='order' autofocus></p>
+  			<p><input class="span12" type="text" name='order'></p>
 
-  			<p><input class="span12" type="text" name='order' autofocus></p>
+  			<p><input class="span12" type="text" name='order'></p>
 
 			<p><input class="btn btn-large btn-info" type='submit' value='Send Drink Order'></p>
 		</form>
