--- a/views/login_form.erb
+++ b/views/login_form.erb
@@ -1,4 +1,19 @@
-<form action='/login/attempt' method='post' class="form-inline well">
-  <input type="text" name='username' placeholder="username" autofocus>
-  <input class="btn primary" type='submit' value='log in'>
+<div class="container-fluid">
+	<div class="span12">
+		<form action='/login/attempt' method='post' class="form-horizontal">
+			<p>
+			<input class="span12" type="text" name='firstname' placeholder="Firstname" autofocus>
+			</p>
+
+			<p>
+  			<input class="span12" type="text" name='lastname' placeholder="Lastname">
+  			</p>
+
+  			<div class="control-group">
+  				<label class="control-label" for="inputEmail">Table #</label>
+  				<div class="controls">
+  					<input class="span2" type="text" name='table' placeholder="4">
+  				</div>
+  			</div>
+  			<p><input class="btn btn-large btn-info" type='submit' value='Lemme Order!'></p>
 </form>
