Lots of form updates and route restructuring to make checkin and order flow easy

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -15,7 +15,7 @@
         <div class="container-fluid">
 
             <a class="brand" href="#">
-              219 West
+              RestlessNapkin
             </a>
 
             <ul class="nav pull-right">
@@ -27,8 +27,7 @@
                       <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
-                      <li><a href="/login/form">Login</a></li>
-                      <li><a href="/logout">Logout</a></li>
+                      <li><a href="/logout">Close Check</a></li>
                 </ul>
               </li>
             </ul>
