--- a/views/drinkorder.erb
+++ b/views/drinkorder.erb
@@ -1,6 +1,10 @@
 <div class="container-fluid">
 	<div class="span12">
+
+		<h1><%= @venue %></h1>
+
 		<form action='/form' method='post' class="form-horizontal">
+  			
   			<p><input class="span12" type="text" name='order1' placeholder="2 Tito's and Sodas with Lime" autofocus></p>
 
   			<p><input class="span12" type="text" name='order2' placeholder="3 Miller Lite Drafts"></p>
