--- a/views/drinkorder.erb
+++ b/views/drinkorder.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 	<div class="span12">
 
-		<h1><%= @venue %></h1>
+		<h1><%= @venue %><%= @table %></h1>
 
 		<form action='/form' method='post' class="form-horizontal">
   			
