--- a/views/login_form.erb
+++ b/views/login_form.erb
@@ -1,6 +1,9 @@
 <div class="container-fluid">
 	<div class="span12">
-		<form action='/checkin/attempt' method='post' class="form-horizontal">
+
+		<h1><%= @venue %></h1>
+
+		<form action='<%= @venue %>/<%= @table %>/attempt' method='post' class="form-horizontal">
 			<p>
 			<input class="span12" type="text" name='firstname' placeholder="Firstname" autofocus>
 			</p>
@@ -12,7 +15,7 @@
   			<p>
   			<div class="input-prepend">
   				<span class="add-on">Table #</span>
-  				<input class="span2" id="prependedInput" type="text" placeholder="4">
+  				<input class="span2" id="prependedInput" type="text" name='<%= @table %>' placeholder="4">
 			</div>
 			</p>
 
