Completed smoke and mirrors flow of ordering

--- a/views/checkin.erb
+++ b/views/checkin.erb
@@ -12,5 +12,7 @@
         <option>Clarks</option>
       </select></p>
 
-  		<p><input name="<%= @venue %> class="btn btn-large btn-info" type='submit' value='Checkin'></p>
-</form>
+  		<p><input name='<%= @venue %>' class="btn btn-large btn-info" type='submit' value='Checkin'></p>
+      </form>
+  </div>
+</div>
