--- a/views/login_form.erb
+++ b/views/login_form.erb
@@ -19,5 +19,7 @@
 			</div>
 			</p>
 
-  			<p><input class="btn btn-large btn-info" type='submit' value='Lemme Order!'></p>
-</form>
+  			<p><input class="btn btn-large btn-info" type='submit' value='Check in'></p>
+		</form>
+	</div>
+</div>
