--- a/views/drinkorder.erb
+++ b/views/drinkorder.erb
@@ -3,7 +3,7 @@
 
 		<h1><%= @venue %><%= @table %></h1>
 
-		<form action='/form' method='post' class="form-horizontal">
+		<form action='/confirm' method='post' class="form-horizontal">
   			
   			<p><input class="span12" type="text" name='order1' placeholder="2 Tito's and Sodas with Lime" autofocus></p>
 
