Polishing the look and experience of the flow

--- a/views/drinkorder.erb
+++ b/views/drinkorder.erb
@@ -1,12 +1,11 @@
 <div class="container-fluid">
 	<div class="span12">
 
+		<h3><%= venue %> at Table <%= table %></h3>
+
 		<form action='/confirm' method='post' class="form-horizontal">
   			
-			<p><span class="span8 uneditable-input"><%= venue %></span>
-				<span class="span4 uneditable-input"><%= table %></span></p>
-
-  			<p><input class="span12" type="text" name='order1' placeholder="ex. 2 Tito's and Sodas with Lime" autofocus></p>
+			<p><input class="span12" type="text" name='order1' placeholder="ex. 2 Tito's and Sodas with Lime" autofocus></p>
 
   			<p><input class="span12" type="text" name='order2'></p>
 
