Added a splat to venue checkin for phone from

--- a/views/checkin.erb
+++ b/views/checkin.erb
@@ -2,7 +2,7 @@
 	<div class="span12">
     <h2>To order drinks, check in to a venue</h2>
 
-		<form action='/login/form' method='post' class="form-horizontal">
+		<form action='/:venue/checkin' method='post' class="form-horizontal">
 			
       <p><select>
         <option>219West</option>
