--- a/views/drinkorder.erb
+++ b/views/drinkorder.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 	<div class="span12">
 
-		<h3><%= venue %> at Table <%= table %></h3>
+		<h3>@<%= venue %> - Table <%= table %></h3>
 
 		<form action='/confirm' method='post' class="form-horizontal">
   			
