--- a/views/layout.erb
+++ b/views/layout.erb
@@ -23,11 +23,11 @@
                 <a href="#"
                       class="dropdown-toggle"
                       data-toggle="dropdown">
-                      <%= username %>
+                      <%= lastname %>
                       <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
-                      <li><a href="/logout">Close Check</a></li>
+                      <li><a href="/checkout">Get the Check</a></li>
                 </ul>
               </li>
             </ul>
