--- a/views/login_form.erb
+++ b/views/login_form.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 	<div class="span12">
 
-		<h1><%= venue %></h1>
+		<h3>@<%= venue %></h3>
 
 		<form action='/checkin/attempt' method='post' class="form-horizontal">
 			
