--- a/views/checkin.erb
+++ b/views/checkin.erb
@@ -1,5 +1,6 @@
 <div class="container-fluid">
 	<div class="span12">
+	<div class='alert alert-info'>Tell us who you are and where you're sitting.</div>
 
 		<h3>@<%= venue %></h3>
 
