--- a/views/drinkorder.erb
+++ b/views/drinkorder.erb
@@ -1,5 +1,6 @@
 <div class="container-fluid">
 	<div class="span12">
+	<div class='alert alert-info'>Be specific so the bartender doesn't totally screw up  your drink order. We'll all be sad if that happens. </div>
 
 		<h3>@<%= venue %> - Table <%= table %></h3>
 
