Proved I had phone number, removed it from drinkorder

--- a/views/drinkorder.erb
+++ b/views/drinkorder.erb
@@ -2,7 +2,7 @@
 	<div class="span12">
 	<div class='alert alert-info'>Be specific so the bartender doesn't totally screw up  your drink order. Everyone will be sad if <%= firstname %>'s drinks are wrong.</div>
 
-		<h3>@<%= venue %> | Table <%= table %> | <%= phone %></h3>
+		<h3>@<%= venue %> | Table <%= table %></h3>
 
 		<form action='/confirm' method='post' class="form-horizontal">
   			
