--- a/views/confirm.erb
+++ b/views/confirm.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	<div class="span12">
-    <div class='alert alert-info'><% firstname %>, your order has been sent to the bar.</div>
+    <div class='alert alert-info'><%= firstname %>, your order has been sent to the bar.</div>
 
     <form action='/drinkorder' method='post' class="form-horizontal">
     	<p><input class="btn btn-large btn-info" type='submit' value='Another Drink Order'></p>
