Got the database running. Not able to inject entries via my form yet

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -27,6 +27,7 @@
                       <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
+                      <li><a href="/orders/show">Show Orders</a></li>
                       <li><a href="/checkout">Get the Check</a></li>
                 </ul>
               </li>
