Database and flows all working properly

--- a/views/checkin.erb
+++ b/views/checkin.erb
@@ -5,21 +5,19 @@
 		<h3>@<%= venue %></h3>
 
 		<form action='/checkin/attempt' method='post' class="form-horizontal">
-			
-			
 
 			<p>
-			<input class="span12" type="text" name='firstname' placeholder="Firstname" autofocus>
+			<input class="span12" type="text" name="firstname" placeholder="Firstname" autofocus>
 			</p>
 
 			<p>
-  			<input class="span12" type="text" name='lastname' placeholder="Lastname">
+  			<input class="span12" type="text" name="lastname" placeholder="Lastname">
   			</p>
 
   			<p>
   			<div class="input-prepend">
   				<span class="add-on">Table #</span>
-  				<input class="span2" id="prependedInput" type="text" name='table' placeholder="4">
+  				<input class="span2" id="prependedInput" type="text" name='table' placeholder="2">
 			</div>
 			</p>
 
