--- a/views/orders/checkin.erb
+++ b/views/orders/checkin.erb
@@ -4,7 +4,7 @@
 
 		<h3>@<%= venue %></h3>
 
-		<form action='/checkin/attempt' method='post' class="form-horizontal">
+		<form action='/orders/drinks' method='post' class="form-horizontal">
 			
 			
 
