--- a/views/confirm.erb
+++ b/views/confirm.erb
@@ -2,11 +2,13 @@
 	<div class="span12">
     <div class='alert alert-info'><%= firstname %>, your order has been sent to the bar.</div>
 
-    <form action='/drinkorder' method='post' class="form-horizontal">
+    <form action='/orders/drinks' method='post' class="form-horizontal">
     	<p><input class="btn btn-large btn-info" type='submit' value='Another Drink Order'></p>
 	</form>
 
-    <h1>or</h1>
+    <form action='/orders/index' method='post' class="form-horizontal">
+        <p><input class="btn btn-large" type='submit' value='See All Orders'></p>
+    </form>
     
     <form action='/checkout' method='post' class="form-horizontal">
     	<p><input class="btn btn-large btn-danger" type='submit' value='Get the Check'></p>
