--- a/views/orders/drinks.erb
+++ b/views/orders/drinks.erb
@@ -4,7 +4,7 @@
 
 		<h3>@<%= venue %> | Table <%= table %></h3>
 
-		<form action='/confirm' method='post' class="form-horizontal">
+		<form action='/orders' method='post' class="form-horizontal">
   			
 			<p><input class="span12" type="text" id="order_drinks" name="order[drinks]" value="<%= @order.drinks %>" placeholder="ex. 2 Tito's and Sodas with Lime" autofocus></p>
 
@@ -15,12 +15,6 @@
   			<p><input class="span12" type="text" name="order4"></p>
 
   			<p><input class="span12" type="text" name="order5"></p>
-
-  			<input class="span12" type="hidden" id="order_venue" name="order[venue]" value="<%= @order.venue %>">
-  			<input class="span12" type="hidden" id="order_table" name="order[table]" value="<%= @order.table %>">
-  			<input class="span12" type="hidden" id="order_firstname" name="order[firstname]" value="<%= @order.firstname %>">
-  			<input class="span12" type="hidden" id="order_lastname" name="order[lastname]" value="<%= @order.lastname %>">
-  			<input class="span12" type="hidden" id="order_phone" name="order[phone]" value="<%= @order.phone %>">
 
 			<p><input class="btn btn-large btn-info" type='submit' value='Send Drink Order'></p>
 		</form>
