Polished the entire experience

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -27,7 +27,10 @@
                       <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
-                      <li><a href="/orders/show">Show Orders</a></li>
+                      <li><a href="/orders/drinks">Another Drink Order</a></li>
+                      <li><a href="/orders/index">All Orders</a></li>
+                      <li><a href="/table/change">Change Tables</a></li>
+                      <li>-----------------------------</li>
                       <li><a href="/checkout">Get the Check</a></li>
                 </ul>
               </li>
