--- a/views/orders/index.erb
+++ b/views/orders/index.erb
@@ -1,10 +1,9 @@
-<h1>All the Orders</h1>
+<h1>All Orders</h1>
 <ul>
 <% @orders.each do |order| %>
   <li>
-    <h2><a href="/orders/<%= order.id %>"><%= order.lastname %></a>
-    <span><%= order.drinks %></span>
-    </h2>
+    <h3><a href="/orders/<%= order.id %>"><%= order.lastname %></a> @ <%= order.table %><h3>
+    <h4><%= order.drinks %></h4>
   </li>
 <% end %>
 </ul>
