Got rid of placeholder table number

--- a/views/checkin.erb
+++ b/views/checkin.erb
@@ -19,7 +19,7 @@
   			<p>
   			<div class="input-prepend">
   				<span class="add-on">Table #</span>
-  				<input class="span2" id="prependedInput" type="text" name='table' placeholder="4">
+  				<input class="span2" id="prependedInput" type="text" name='table'>
 			</div>
 			</p>
 
