Converting phone to string, pretty time and implemented tables on All Orders screen

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,7 +14,7 @@
       <div class="navbar-inner">
         <div class="container-fluid">
 
-            <a class="brand" href="#">
+            <a class="brand" href="/">
               RestlessNapkin
             </a>
 
