--- a/views/orders/index.erb
+++ b/views/orders/index.erb
@@ -1,9 +1,15 @@
 <h1>All Orders</h1>
-<ul>
-<% @orders.each do |order| %>
-  <li>
-    <h3><a href="/orders/<%= order.id %>"><%= order.lastname %></a> @ <%= order.table %><h3>
-    <h4><%= order.drinks %></h4>
-  </li>
-<% end %>
-</ul>
+<table class="table table-striped">
+	<tbody>
+	
+	<% @orders.each do |order| %>
+  	<tr>
+    	<td><b><a href="/orders/<%= order.id %>"><%= order.lastname %></a></b></td>
+    	<td><b><%= order.table %></b></td>
+    	<td><%= pretty_date(order.created_at) %></td>
+    	<td><b><%= order.drinks %></b></td>
+  	</tr>
+  	<% end %>
+
+ 	</tbody>
+</table>
