--- a/views/orders/index.erb
+++ b/views/orders/index.erb
@@ -1,15 +1,19 @@
-<h1>All Orders</h1>
-<table class="table table-striped">
-	<tbody>
+<div class="container-fluid">
+	<div class="span12">
+		<h1>All Orders</h1>
+			<table class="table table-striped">
+				<tbody>
 	
-	<% @orders.each do |order| %>
-  	<tr>
-    	<td><b><a href="/orders/<%= order.id %>"><%= order.lastname %></a></b></td>
-    	<td><b><%= order.table %></b></td>
-    	<td><%= pretty_date(order.created_at) %></td>
-    	<td><b><%= order.drinks %></b></td>
-  	</tr>
-  	<% end %>
+					<% @orders.each do |order| %>
+  				<tr>
+    				<td><b><a href="/orders/<%= order.id %>"><%= order.lastname %></a></b></td>
+    				<td><b><%= order.table %></b></td>
+    				<td><%= pretty_date(order.created_at) %></td>
+    				<td><b><%= order.drinks %></b></td>
+  				</tr>
+  				<% end %>
 
- 	</tbody>
-</table>
+ 				</tbody>
+			</table>
+	</div>
+</div>
