Added views for venue and user

--- a/views/orders/index.erb
+++ b/views/orders/index.erb
@@ -3,9 +3,9 @@
 		<h1>All Orders</h1><br>
 			<% @orders.each do |order| %>
   				
-    			<h4><a href="/orders/<%= order.id %>"><%= order.lastname %></a> at <%= order.venue %> Table <%= order.table %></h4>
-    			<h3><%= order.drinks %></h3>
-    			<p><%= pretty_date(order.created_at) %> from <%= order.phone %></p>
+    			<h4><a href="/user/<%= order.phone %>"><%= order.lastname %></a> at <a href="/venue/<%= order.venue %>"><%= order.venue %></a> Table <%= order.table %></h4>
+    			<h3><a href="/orders/<%= order.id %>"><%= order.drinks %></a></h3>
+    			<p><%= pretty_date(order.created_at) %> from <a href="/user/<%= order.phone %>"><%= order.phone %></a></p>
     			<br>
   		<% end %>
 	</div>
