--- a/views/layout.erb
+++ b/views/layout.erb
@@ -28,9 +28,11 @@
                 </a>
                 <ul class="dropdown-menu">
                       <li><a href="/orders/drinks">Another Drink Order</a></li>
-                      <li><a href="/orders/index">All Orders</a></li>
+                      <li>-------------------------------</li>
                       <li><a href="/table/change">Change Tables</a></li>
-                      <li>-----------------------------</li>
+                      <li>-------------------------------</li>
+                      <li><a href="/user/<%= phone %>">Your Orders</a></li>
+                      <li>-------------------------------</li>
                       <li><a href="/checkout">Get the Check</a></li>
                 </ul>
               </li>
