--- a/views/venue/table/show.erb
+++ b/views/venue/table/show.erb
@@ -1,9 +1,9 @@
 <div class="container-fluid">
   <div class="span12">
-    <h1><%= @venue %></h1><br>
+    <h1><%= @venue %> | Table <%= @table %></h1><br>
       <% @orders.each do |order| %>
           
-          <h4><a href="/user/<%= order.phone %>"><%= order.lastname %></a> at <%= order.venue %> <a href="/venue/<%= order.venue %>/table/<%= order.table %>">Table <%= order.table %></a></h4>
+          <h4><a href="/user/<%= order.phone %>"><%= order.lastname %></a> at <a href="/venue/<%= order.venue %>"><%= order.venue %></a> Table <%= order.table %></h4>
           <h3><a href="/orders/<%= order.id %>"><%= order.drinks %></a></h3>
           <p><%= pretty_date(order.created_at) %> from <a href="/user/<%= order.phone %>"><%= order.phone %></a></p>
           <br>
