Added jquery to auto-reload All Orders

--- a/views/orders/index.erb
+++ b/views/orders/index.erb
@@ -1,12 +1,17 @@
-<div class="container-fluid">
-	<div class="span12">
-		<h1>All Orders</h1><br>
-			<% @orders.each do |order| %>
+<div id='content'>
+	<h1>All Orders</h1><br>
+		<% @orders.each do |order| %>
   				
-    			<h4><a href="/user/<%= order.phone %>"><%= order.lastname %></a> at <a href="/venue/<%= order.venue %>"><%= order.venue %></a> <a href="/venue/<%= order.venue %>/table/<%= order.table %>">Table <%= order.table %></a></h4>
-    			<h3><a href="/orders/<%= order.id %>"><%= order.drinks %></a></h3>
-    			<p><%= pretty_date(order.created_at) %> from <a href="/user/<%= order.phone %>"><%= order.phone %></a></p>
-    			<br>
-  		<% end %>
-	</div>
+    	<h4><a href="/user/<%= order.phone %>"><%= order.lastname %></a> at <a href="/venue/<%= order.venue %>"><%= order.venue %></a> <a href="/venue/<%= order.venue %>/table/<%= order.table %>">Table <%= order.table %></a></h4>
+    	<h3><a href="/orders/<%= order.id %>"><%= order.drinks %></a></h3>
+    	<p><%= pretty_date(order.created_at) %> from <a href="/user/<%= order.phone %>"><%= order.phone %></a></p>
+    	<br>
+  	<% end %>
+		<script>
+      function updateContent(){
+        // Assuming we have #content
+        $('#content').load('/');
+      }
+      setInterval( "updateContent()", 1000 );
+    </script>
 </div>
