--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,9 +4,13 @@
   	<title>RestlessNapkin</title>
     <script src="/vendor/jquery-1.9.1.min.js" type="text/javascript"></script>
     <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.css">
-	<link rel="stylesheet" href="/vendor/fontawesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/vendor/fontawesome/css/font-awesome.min.css">
+
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+  
   </head>
   <body>
 
@@ -44,11 +48,13 @@
     </div>
 
 
-	<div class="container">
+	<div class="container-fluid">
+    <div class="span12">
 		<%if @error then %>
 			<div class="alert alert-error"><%= @error %></div>
 		<% end %>
     	<%= yield %>
+    </div>
 	</div>
   </body>
 </html>
