Slowed down the jquery updates so not to freeze the browser

--- a/views/orders/index.erb
+++ b/views/orders/index.erb
@@ -12,6 +12,6 @@
         // Assuming we have #content
         $('#content').load('/');
       }
-      setInterval( "updateContent()", 1000 );
+      setTimeout( "updateContent()", 10000 );
     </script>
 </div>
