--- a/views/user/show.erb
+++ b/views/user/show.erb
@@ -5,4 +5,11 @@
     <h3><a href="/orders/<%= order.id %>"><%= order.drinks %></a></h3>
     <p><%= pretty_date(order.created_at) %> from <%= order.phone %></p>
     <br>
+    <script>
+      function updateContent(){
+        // Assuming we have #content
+        $('#content').load('/user/<%= order.phone %>');
+      }
+      setTimeout( "updateContent()", 10000 );
+    </script>
   <% end %>
