--- a/views/venue/show.erb
+++ b/views/venue/show.erb
@@ -5,4 +5,11 @@
     <h3><a href="/orders/<%= order.id %>"><%= order.drinks %></a></h3>
     <p><%= pretty_date(order.created_at) %> from <a href="/user/<%= order.phone %>"><%= order.phone %></a></p>
     <br>
+    <script>
+      function updateContent(){
+        // Assuming we have #content
+        $('#content').load('/venue/<%= order.venue %>');
+      }
+      setTimeout( "updateContent()", 10000 );
+    </script>
   <% end %>
