Added proper div to other views to update content

--- a/views/venue/show.erb
+++ b/views/venue/show.erb
@@ -1,3 +1,4 @@
+<div id='content'>
 <h1><%= @venue %></h1><br>
   <% @orders.each do |order| %>
           
@@ -13,3 +14,4 @@
       setTimeout( "updateContent()", 10000 );
     </script>
   <% end %>
+</div>
