--- a/views/venue/table/show.erb
+++ b/views/venue/table/show.erb
@@ -1,3 +1,4 @@
+<div id='content'>
 <h1><%= @venue %> | Table <%= @table %></h1><br>
   <% @orders.each do |order| %>
           
@@ -12,5 +13,5 @@
       }
       setTimeout( "updateContent()", 10000 );
     </script>
-</div>
   <% end %>
+</div>
