Think I finally fixed the page reloading issue, every 10 seconds currently

--- a/views/orders/index.erb
+++ b/views/orders/index.erb
@@ -8,10 +8,9 @@
     	<br>
   	<% end %>
 		<script>
-      function updateContent(){
-        // Assuming we have #content
-        $('#content').load('/');
-      }
-      setTimeout( "updateContent()", 15000 );
+      $(document).ready(function() {
+      	setTimeout(function() {
+        	$('#content').load('/');}, 10000);
+      });
     </script>
 </div>
