Adding logo to header

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -19,7 +19,7 @@
         <div class="container-fluid">
 
             <a class="brand" href="/">
-              RestlessNapkin
+              <img src="/static/graphics/restlessnapkin_logo.png" />
             </a>
 
             <ul class="nav pull-right">
