Retrying logo add

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -19,7 +19,7 @@
         <div class="container-fluid">
 
             <a class="brand" href="/">
-              <img src="/static/graphics/restlessnapkin_logo.png" />
+              <img src="https://www.dropbox.com/s/mo3wlecw633vy15/restlessnapkin_logo_36.png" />
             </a>
 
             <ul class="nav pull-right">
