Fixed routes on auto refreshes

--- a/views/user/show.erb
+++ b/views/user/show.erb
@@ -9,7 +9,7 @@
     <script>
       $(document).ready(function() {
       	setTimeout(function() {
-        	$('#content').load('/');}, 10000);
+        	$('#content').load('/user/<%= @phone %>');}, 10000);
       });
     </script>
   <% end %>
