--- a/views/orders/index.erb
+++ b/views/orders/index.erb
@@ -1,5 +1,5 @@
 <div id='content'>
-	<h1>SlipInn</h1><br>
+	<h1>All Orders</h1><br>
 		<% @orders.each do |order| %>
   				
     	<h4><a href="/user/<%= order.phone %>"><%= order.lastname %></a> at <a href="/venue/<%= order.venue %>"><%= order.venue %></a> <a href="/venue/<%= order.venue %>/table/<%= order.table %>">Table <%= order.table %></a></h4>
