Fixed issue with reordering not keeping session. Also restyled the All Orders page.

--- a/views/venue/show.erb
+++ b/views/venue/show.erb
@@ -2,9 +2,9 @@
 <h1><%= @venue %></h1><br>
   <% @orders.each do |order| %>
           
-    <h4><a href="/user/<%= order.phone %>"><%= order.lastname %></a> at <%= order.venue %> <a href="/venue/<%= order.venue %>/table/<%= order.table %>">Table <%= order.table %></a></h4>
+    <h4><%= order.venue %> at <a href="/venue/<%= order.venue %>/table/<%= order.table %>">Table <%= order.table %></a></h4>
     <h3><a href="/orders/<%= order.id %>"><%= order.drinks %></a></h3>
-    <p><%= pretty_date(order.created_at) %> from <a href="/user/<%= order.phone %>"><%= order.phone %></a></p>
+    <p>from <a href="/user/<%= order.phone %>"><%= order.firstname %></a></p>
     <br>
     <script>
       $(document).ready(function() {
