--- a/views/orders/index.erb
+++ b/views/orders/index.erb
@@ -1,11 +1,11 @@
 <div id='content'>
-	<h1>All Orders</h1><br>
+	<h3>Austin's Orders</h1><hr>
 		<% @orders.each do |order| %>
   				
-    	<h4><a href="/user/<%= order.phone %>"><%= order.lastname %></a> at <a href="/venue/<%= order.venue %>"><%= order.venue %></a> <a href="/venue/<%= order.venue %>/table/<%= order.table %>">Table <%= order.table %></a></h4>
-    	<h3><a href="/orders/<%= order.id %>"><%= order.drinks %></a></h3>
-    	<p><%= pretty_date(order.created_at) %> from <a href="/user/<%= order.phone %>"><%= order.phone %></a></p>
-    	<br>
+    	<h5><a href="/venue/<%= order.venue %>"><%= order.venue %></a> at <a href="/venue/<%= order.venue %>/table/<%= order.table %>">Table <%= order.table %></a></h4>
+    	<h4><a href="/orders/<%= order.id %>"><%= order.drinks %></a></h3>
+    	<p><%= pretty_date(order.created_at) %> from <%= order.firstname %></a></p>
+    	<hr>
   	<% end %>
 		<script>
       $(document).ready(function() {
