--- a/views/venue/table/show.erb
+++ b/views/venue/table/show.erb
@@ -1,11 +1,11 @@
 <div id='content'>
-<h1><%= @venue %> | Table <%= @table %></h1><br>
+<h3><%= @venue %> | Table <%= @table %></h3><hr>
   <% @orders.each do |order| %>
           
-    <h4><a href="/user/<%= order.phone %>"><%= order.lastname %></a> at <a href="/venue/<%= order.venue %>"><%= order.venue %></a> Table <%= order.table %></h4>
-     <h3><a href="/orders/<%= order.id %>"><%= order.drinks %></a></h3>
+    <h5><a href="/user/<%= order.phone %>"><%= order.lastname %></a> at <a href="/venue/<%= order.venue %>"><%= order.venue %></a> Table <%= order.table %></h4>
+     <h4><a href="/orders/<%= order.id %>"><%= order.drinks %></a></h3>
      <p><%= pretty_date(order.created_at) %> from <a href="/user/<%= order.phone %>"><%= order.phone %></a></p>
-     <br>
+     <hr>
      <script>
       $(document).ready(function() {
       	setTimeout(function() {
