Added initial idea for the Barkeeper feature to alert bars of drink orders

--- a/views/orders/user.erb
+++ b/views/orders/user.erb
@@ -3,6 +3,6 @@
   				
     <h4><a href="/orders/<%= order.id %>"><%= order.lastname %></a> at <%= order.venue %> Table <%= order.table %></h4>
     <h3><%= order.drinks %></h3>
-    <p><%= pretty_date(order.created_at) %> from <%= order.phone %></p>
+    <p>from <%= order.phone %></p>
     <br>
   <% end %>
