--- a/views/user/show.erb
+++ b/views/user/show.erb
@@ -4,7 +4,7 @@
           
     <h5><%= order.lastname %> at <a href="/venue/<%= order.venue %>"><%= order.venue %></a> <a href="/venue/<%= order.venue %>/table/<%= order.table %>">Table <%= order.table %></a></h5>
     <h4><a href="/orders/<%= order.id %>"><%= order.drinks %></a></h4>
-    <p><%= pretty_date(order.created_at) %> from <%= order.phone %></p>
+    <p>from <%= order.phone %></p>
     <hr>
     <script>
       $(document).ready(function() {
