--- a/views/orders/show.erb
+++ b/views/orders/show.erb
@@ -1,3 +1,3 @@
 <h5><a href="/venue/<%= @order.venue %>"><%= @order.venue %></a> at <a href="/venue/<%= @order.venue %>/table/<%= @order.table %>">Table <%= @order.table %></a></h5>
     	<h4><%= @order.drinks %></h4>
-    	<p><%= pretty_date(@order.created_at) %> from <%= @order.firstname %></p>
+    	<p>from <%= @order.firstname %></p>
