--- a/views/venue/table/show.erb
+++ b/views/venue/table/show.erb
@@ -4,7 +4,7 @@
           
     <h5><a href="/user/<%= order.phone %>"><%= order.lastname %></a> at <a href="/venue/<%= order.venue %>"><%= order.venue %></a> Table <%= order.table %></h4>
      <h4><a href="/orders/<%= order.id %>"><%= order.drinks %></a></h3>
-     <p><%= pretty_date(order.created_at) %> from <a href="/user/<%= order.phone %>"><%= order.phone %></a></p>
+     <p>from <a href="/user/<%= order.phone %>"><%= order.phone %></a></p>
      <hr>
      <script>
       $(document).ready(function() {
