--- a/views/barkeeper.erb
+++ b/views/barkeeper.erb
@@ -1,15 +1,17 @@
-<div id="content" style="background: #A21721; color: white">
-  	
-    <div class="row-fluid">	
-      <div style="padding:30px 0 0 25px;" class="span6">
-    	 <h1>six minutes ago</h1>
+<div id="content">
+  	<% @orders.each do |order| %>
+
+    <div class="row-fluid" style="background: #A21721; color: white">	
+      <div style="padding:25px;" class="span6">
+    	 <h1><%= order.drinks %></h1>
       </div>
 
-      <div style="padding-top:20px;" class="span3 offset3">
-        <img style="padding:5px;"src="http://placehold.it/80x80" class="img-circle">
+      <div class="span3 offset3">
+        <img style="padding:20px;"src="http://placehold.it/80x80" class="img-circle">
       </div>
     </div>
-  <hr>
+<br>
+    <% end %>
 
 		<script>
       $(document).ready(function() {
