--- a/views/barkeeper.erb
+++ b/views/barkeeper.erb
@@ -1,5 +1,21 @@
 <div id="content">
-  	<% @orders.each do |order| %>
+  	<% @received.each do |received| %>
+
+    <div class="row-fluid"> 
+      <div style="padding:25px;" class="span6">
+       <h1><%= received.drinks %></h1>
+      </div>
+
+      <div class="span3 offset3">
+        <a href="#" class="received_id_<%= received.id %>"> <img style="padding:20px;"src="http://restlessnapkin.wpengine.com/wp-content/uploads/2013/06/dark_grey_dot.png" class="img-circle"></a>
+      </div>
+    </div>
+
+    <br>
+
+    <% end %>
+
+    <% @orders.each do |order| %>
 
     <div class="row-fluid" style="background: #A21721; color: white">	
       <div style="padding:25px;" class="span6">
@@ -7,10 +23,25 @@
       </div>
 
       <div class="span3 offset3">
-        <img style="padding:20px;"src="http://placehold.it/80x80" class="img-circle">
+        <a href="#" class="order_id_<%= order.id %>"> <img style="padding:20px;"src="http://restlessnapkin.wpengine.com/wp-content/uploads/2013/06/grey_dot.png" class="img-circle"></a>
       </div>
     </div>
-<br>
+
+    <br>
+
+    <script>
+      $(document).ready(function() {
+        $('.order_id_<%= order.id %>').click(function() {
+          $.ajax({
+            type: "PUT",
+            url: "/orders/received/<%= order.id %>",
+            }).done(function( msg ) {
+            alert( "Data Saved");
+          });
+        });
+      });
+    </script>
+
     <% end %>
 
 		<script>
