--- a/views/barkeeper.erb
+++ b/views/barkeeper.erb
@@ -23,7 +23,8 @@
       </div>
 
       <div class="span3 offset3">
-        <a href="#" class="order_id_<%= order.id %>"> <img style="padding:20px;"src="http://restlessnapkin.wpengine.com/wp-content/uploads/2013/06/grey_dot.png" class="img-circle"></a>
+          <a href="#" class="order_id_<%= order.id %>">
+          <img style="padding:20px;"src="http://restlessnapkin.wpengine.com/wp-content/uploads/2013/06/grey_dot.png" class="img-circle"></a>
       </div>
     </div>
 
@@ -47,7 +48,7 @@
 		<script>
       $(document).ready(function() {
       	setTimeout(function() {
-        	$('#content').load('/moontower');}, 10000);
+        	$('#content').load('/barkeeper');}, 10000);
       });
     </script>
 </div>
