Tinkering with Barkeeper

--- a/views/barkeeper.erb
+++ b/views/barkeeper.erb
@@ -1,20 +1,5 @@
 <div id="content">
-  	<% @received.each do |received| %>
-
-    <div class="row-fluid"> 
-      <div style="padding:25px;" class="span6">
-       <h1><%= received.drinks %></h1>
-      </div>
-
-      <div class="span3 offset3">
-        <a href="/barkeeper" class="received_id_<%= received.id %>"> <img style="padding:20px;"src="http://restlessnapkin.wpengine.com/wp-content/uploads/2013/06/dark_grey_dot.png" class="img-circle"></a>
-      </div>
-    </div>
-
-    <br>
-
-    <% end %>
-
+  	
     <% @orders.each do |order| %>
 
     <div class="row-fluid" style="background: #A21721; color: white">	
@@ -36,8 +21,9 @@
           $.ajax({
             type: "PUT",
             url: "/orders/received/<%= order.id %>",
-            }).done(function( msg ) {
-              alert( "Data Saved");
+            }).done(function() {
+              $(this).fadeOut('fast', function() {
+              });
           });
         });
       });
@@ -48,7 +34,7 @@
 		<script>
       $(document).ready(function() {
       	setTimeout(function() {
-        	$('#content').load('/barkeeper');}, 5000);
+        	$('#content').load('/barkeeper');}, 10000);
       });
     </script>
 </div>
