--- a/views/barkeeper.erb
+++ b/views/barkeeper.erb
@@ -10,7 +10,7 @@
       </div>
 
       <div class="span3 offset3">
-          <a href="/barkeeper" class="order_id_<%= order.id %>">
+          <a href="#" class="order_id_<%= order.id %>">
           <img style="padding:20px;"src="http://restlessnapkin.wpengine.com/wp-content/uploads/2013/06/grey_dot.png" class="img-circle"></a>
       </div>
     </div>
@@ -36,7 +36,7 @@
 		<script>
       $(document).ready(function() {
       	setTimeout(function() {
-        	$('#content').load('/barkeeper');}, 2000);
+        	$('#content').load('/barkeeper');}, 10000);
       });
     </script>
 </div>
