--- a/views/orders/index.erb
+++ b/views/orders/index.erb
@@ -4,7 +4,7 @@
   				
     	<h5><a href="/venue/<%= order.venue %>"><%= order.venue %></a> at <a href="/venue/<%= order.venue %>/table/<%= order.table %>">Table <%= order.table %></a></h5>
     	<h4><a href="/orders/<%= order.id %>"><%= order.drinks %></a></h4>
-    	<p>from <%= order.firstname %></a></p>
+    	<p>Order <%= order.id %> from <%= order.firstname %></a></p>
     	<hr>
   	<% end %>
 		<script>
