Polishing the order view screen with big order number

--- a/views/orders/show.erb
+++ b/views/orders/show.erb
@@ -1,6 +1,10 @@
-<h5><a href="/venue/<%= @order.venue %>"><%= @order.venue %></a> at <a href="/venue/<%= @order.venue %>/table/<%= @order.table %>">Table <%= @order.table %></a></h5>
-  <h4><%= @order.drinks %></h4>
-  <p>from <%= @order.firstname %></p>
+<div class="row-fluid" style="background: #555555; color: #f9f9f9">
+	<div style="padding:10px;" class="span12">
+		<h5><a href="/venue/<%= @order.venue %>"><%= @order.venue %></a> at <a href="/venue/<%= @order.venue %>/table/<%= @order.table %>">Table <%= @order.table %></a></h5>
+  	<h4><%= @order.drinks %></h4>
+  	<p>from <%= @order.firstname %></p>
+  </div>
+</div>
 
 <div class="order-number">
  <p><%= @order.id %></p>
