--- a/views/layout.erb
+++ b/views/layout.erb
@@ -33,11 +33,11 @@
                 <ul class="dropdown-menu">
                       <li><a href="/orders/drinks">Another Drink Order</a></li>
                       <li>-----------------------------</li>
-                      <li><a href="/table/change">Change Tables</a></li>
+                      <li><a href="/location/change">Change Location</a></li>
                       <li>-----------------------------</li>
                       <li><a href="/user/<%= phone %>">Your Orders</a></li>
                       <li>-----------------------------</li>
-                      <li><a href="/checkout">Get the Check</a></li>
+                      <li><a href="/checkout">Close your tab</a></li>
                 </ul>
               </li>
             </ul>
